--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delivery-food-rest-api",
+  "name": "template",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,23 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.0.1",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "gravatar": "^1.8.2",
+    "jimp": "^0.16.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "9.0.0",
+    "mongoose": "^6.5.0",
+    "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "query-string": "^7.1.1",
+    "swagger-ui-express": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.19.0",
